--- a/test.ipynb
+++ b/test.ipynb
@@ -44,8 +44,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "0d59ca3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ WebSocket server started on ws://localhost:8765\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-8 (start_server):\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/anaconda3/envs/drink/lib/python3.11/threading.py\", line 1045, in _bootstrap_inner\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "    self.run()\n",
+      "  File \"/opt/anaconda3/envs/drink/lib/python3.11/site-packages/ipykernel/ipkernel.py\", line 766, in run_closure\n",
+      "    _threading_Thread_run(self)\n",
+      "  File \"/opt/anaconda3/envs/drink/lib/python3.11/threading.py\", line 982, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/var/folders/v_/945nj2r12r1_xm9g7k44hnk40000gn/T/ipykernel_64263/65494139.py\", line 22, in start_server\n",
+      "  File \"/opt/anaconda3/envs/drink/lib/python3.11/asyncio/base_events.py\", line 654, in run_until_complete\n",
+      "    return future.result()\n",
+      "           ^^^^^^^^^^^^^^^\n",
+      "  File \"/var/folders/v_/945nj2r12r1_xm9g7k44hnk40000gn/T/ipykernel_64263/65494139.py\", line 19, in run_server\n",
+      "  File \"/opt/anaconda3/envs/drink/lib/python3.11/site-packages/websockets/asyncio/server.py\", line 813, in __aenter__\n",
+      "    return await self\n",
+      "           ^^^^^^^^^^\n",
+      "  File \"/opt/anaconda3/envs/drink/lib/python3.11/site-packages/websockets/asyncio/server.py\", line 831, in __await_impl__\n",
+      "    server = await self.create_server\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/opt/anaconda3/envs/drink/lib/python3.11/asyncio/base_events.py\", line 1536, in create_server\n",
+      "    raise OSError(err.errno, msg) from None\n",
+      "OSError: [Errno 48] error while attempting to bind on address ('::1', 8765, 0, 0): address already in use\n"
+     ]
+    }
+   ],
+   "source": [
+    "import asyncio\n",
+    "import websockets\n",
+    "import threading\n",
+    "\n",
+    "async def echo_server(websocket):\n",
+    "    print(\"🖥️  Server: Client connected\")\n",
+    "    try:\n",
+    "        async for message in websocket:\n",
+    "            print(f\"🖥️  Server received: {message}\")\n",
+    "            await websocket.send(f\"Echo: {message}\")\n",
+    "    except websockets.exceptions.ConnectionClosed:\n",
+    "        print(\"🖥️  Server: Client disconnected\")\n",
+    "\n",
+    "def start_server():\n",
+    "    loop = asyncio.new_event_loop()\n",
+    "    asyncio.set_event_loop(loop)\n",
+    "\n",
+    "    async def run_server():\n",
+    "        async with websockets.serve(echo_server, \"localhost\", 8765):\n",
+    "            await asyncio.Future()  # Run forever\n",
+    "\n",
+    "    loop.run_until_complete(run_server())\n",
+    "\n",
+    "# Start server in background thread\n",
+    "server_thread = threading.Thread(target=start_server, daemon=True)\n",
+    "server_thread.start()\n",
+    "\n",
+    "print(\"✅ WebSocket server started on ws://localhost:8765\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "347e21da",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b65b94b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "76e8e6e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📤 Client sending: Hello from notebook!\n",
+      "📥 Client received: Echo: Hello from notebook!\n"
+     ]
+    }
+   ],
+   "source": [
+    "async def test_client():\n",
+    "    uri = \"ws://localhost:8765\"\n",
+    "    try:\n",
+    "        async with websockets.connect(uri) as websocket:\n",
+    "            msg = \"Hello from notebook!\"\n",
+    "            print(f\"📤 Client sending: {msg}\")\n",
+    "            await websocket.send(msg)\n",
+    "            response = await websocket.recv()\n",
+    "            print(f\"📥 Client received: {response}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ WebSocket error: {e}\")\n",
+    "\n",
+    "await test_client()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abd62cc6",
    "metadata": {},
    "outputs": [],
    "source": []
