--- a/test.ipynb
+++ b/test.ipynb
@@ -3,48 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2a7763cf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tool_definitions import test_connection\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "1f70ef99",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CONNECTION TEST: Testing WebSocket connection...\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "asyncio.run() cannot be called from a running event loop",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mtest_connection\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/GitHub/drink/tool_definitions.py:159\u001b[39m, in \u001b[36mtest_connection\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m    154\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    155\u001b[39m \u001b[33;03mTests the WebSocket connection to the microcontroller.\u001b[39;00m\n\u001b[32m    156\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    157\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mCONNECTION TEST: Testing WebSocket connection...\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m159\u001b[39m response = \u001b[43msend_command_to_mcu\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mPING\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m    161\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(response, \u001b[38;5;28mdict\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m response.get(\u001b[33m\"\u001b[39m\u001b[33mstatus\u001b[39m\u001b[33m\"\u001b[39m) == \u001b[33m\"\u001b[39m\u001b[33msuccess\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m    162\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33m✅ WebSocket connection test successful!\u001b[39m\u001b[33m\"\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/GitHub/drink/tool_definitions.py:106\u001b[39m, in \u001b[36msend_command_to_mcu\u001b[39m\u001b[34m(command, data)\u001b[39m\n\u001b[32m    104\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34msend_command_to_mcu\u001b[39m(command: \u001b[38;5;28mstr\u001b[39m, data: \u001b[38;5;28mdict\u001b[39m = \u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[32m    105\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Synchronous wrapper for the async WebSocket communication.\"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m106\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43masyncio\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43msend_command_to_mcu_async\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcommand\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/opt/anaconda3/envs/drink/lib/python3.11/asyncio/runners.py:186\u001b[39m, in \u001b[36mrun\u001b[39m\u001b[34m(main, debug)\u001b[39m\n\u001b[32m    161\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"Execute the coroutine and return the result.\u001b[39;00m\n\u001b[32m    162\u001b[39m \n\u001b[32m    163\u001b[39m \u001b[33;03mThis function runs the passed coroutine, taking care of\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    182\u001b[39m \u001b[33;03m    asyncio.run(main())\u001b[39;00m\n\u001b[32m    183\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    184\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m events._get_running_loop() \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    185\u001b[39m     \u001b[38;5;66;03m# fail fast with short traceback\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m186\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[32m    187\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33masyncio.run() cannot be called from a running event loop\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    189\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m Runner(debug=debug) \u001b[38;5;28;01mas\u001b[39;00m runner:\n\u001b[32m    190\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m runner.run(main)\n",
-      "\u001b[31mRuntimeError\u001b[39m: asyncio.run() cannot be called from a running event loop"
-     ]
-    }
-   ],
-   "source": [
-    "test_connection()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "id": "0d59ca3f",
    "metadata": {},
    "outputs": [
@@ -52,41 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ WebSocket server started on ws://localhost:8765\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-8 (start_server):\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/anaconda3/envs/drink/lib/python3.11/threading.py\", line 1045, in _bootstrap_inner\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "    self.run()\n",
-      "  File \"/opt/anaconda3/envs/drink/lib/python3.11/site-packages/ipykernel/ipkernel.py\", line 766, in run_closure\n",
-      "    _threading_Thread_run(self)\n",
-      "  File \"/opt/anaconda3/envs/drink/lib/python3.11/threading.py\", line 982, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/var/folders/v_/945nj2r12r1_xm9g7k44hnk40000gn/T/ipykernel_64263/65494139.py\", line 22, in start_server\n",
-      "  File \"/opt/anaconda3/envs/drink/lib/python3.11/asyncio/base_events.py\", line 654, in run_until_complete\n",
-      "    return future.result()\n",
-      "           ^^^^^^^^^^^^^^^\n",
-      "  File \"/var/folders/v_/945nj2r12r1_xm9g7k44hnk40000gn/T/ipykernel_64263/65494139.py\", line 19, in run_server\n",
-      "  File \"/opt/anaconda3/envs/drink/lib/python3.11/site-packages/websockets/asyncio/server.py\", line 813, in __aenter__\n",
-      "    return await self\n",
-      "           ^^^^^^^^^^\n",
-      "  File \"/opt/anaconda3/envs/drink/lib/python3.11/site-packages/websockets/asyncio/server.py\", line 831, in __await_impl__\n",
-      "    server = await self.create_server\n",
-      "             ^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/anaconda3/envs/drink/lib/python3.11/asyncio/base_events.py\", line 1536, in create_server\n",
-      "    raise OSError(err.errno, msg) from None\n",
-      "OSError: [Errno 48] error while attempting to bind on address ('::1', 8765, 0, 0): address already in use\n"
+      "WebSocket server started on ws://localhost:8765\n"
      ]
     }
    ],
@@ -96,13 +20,13 @@
     "import threading\n",
     "\n",
     "async def echo_server(websocket):\n",
-    "    print(\"🖥️  Server: Client connected\")\n",
+    "    print(\"Server: Client connected\")\n",
     "    try:\n",
     "        async for message in websocket:\n",
-    "            print(f\"🖥️  Server received: {message}\")\n",
+    "            print(f\"Server received: {message}\")\n",
     "            await websocket.send(f\"Echo: {message}\")\n",
     "    except websockets.exceptions.ConnectionClosed:\n",
-    "        print(\"🖥️  Server: Client disconnected\")\n",
+    "        print(\"Server: Client disconnected\")\n",
     "\n",
     "def start_server():\n",
     "    loop = asyncio.new_event_loop()\n",
@@ -118,7 +42,7 @@
     "server_thread = threading.Thread(target=start_server, daemon=True)\n",
     "server_thread.start()\n",
     "\n",
-    "print(\"✅ WebSocket server started on ws://localhost:8765\")"
+    "print(\"WebSocket server started on ws://localhost:8765\")"
    ]
   },
   {
@@ -139,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "76e8e6e8",
    "metadata": {},
    "outputs": [
@@ -147,8 +71,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📤 Client sending: Hello from notebook!\n",
-      "📥 Client received: Echo: Hello from notebook!\n"
+      "Server: Client connected\n",
+      "Client sending: Hello from notebook!\n",
+      "Server received: Hello from notebook!\n",
+      "Client received: Echo: Hello from notebook!\n"
      ]
     }
    ],
@@ -158,12 +84,12 @@
     "    try:\n",
     "        async with websockets.connect(uri) as websocket:\n",
     "            msg = \"Hello from notebook!\"\n",
-    "            print(f\"📤 Client sending: {msg}\")\n",
+    "            print(f\"Client sending: {msg}\")\n",
     "            await websocket.send(msg)\n",
     "            response = await websocket.recv()\n",
-    "            print(f\"📥 Client received: {response}\")\n",
+    "            print(f\"Client received: {response}\")\n",
     "    except Exception as e:\n",
-    "        print(f\"❌ WebSocket error: {e}\")\n",
+    "        print(f\"WebSocket error: {e}\")\n",
     "\n",
     "await test_client()"
    ]
@@ -193,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
