Cleaned up server notebook
server.ipynb (websocket server)

--- a/server.ipynb
+++ b/server.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "264ecf0a",
+   "metadata": {},
+   "source": [
+    "#### Start Websocket Server\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "0d59ca3f",
@@ -44,63 +52,6 @@
     "\n",
     "print(\"WebSocket server started on ws://localhost:8765\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "347e21da",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4b65b94b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "76e8e6e8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Server: Client connected\n",
-      "Client sending: Hello from notebook!\n",
-      "Server received: Hello from notebook!\n",
-      "Client received: Echo: Hello from notebook!\n"
-     ]
-    }
-   ],
-   "source": [
-    "async def test_client():\n",
-    "    uri = \"ws://localhost:8765\"\n",
-    "    try:\n",
-    "        async with websockets.connect(uri) as websocket:\n",
-    "            msg = \"Hello from notebook!\"\n",
-    "            print(f\"Client sending: {msg}\")\n",
-    "            await websocket.send(msg)\n",
-    "            response = await websocket.recv()\n",
-    "            print(f\"Client received: {response}\")\n",
-    "    except Exception as e:\n",
-    "        print(f\"WebSocket error: {e}\")\n",
-    "\n",
-    "await test_client()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "abd62cc6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
